--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ivan Sharai - Jedi Master. Иван Шарай - Мастер-джедай. Learn from the wisdom of Jedi Master Ivan Sharai.">
+    <meta name="google-site-verification" content="KYFAOQNLYhFYTRqDasa5vqsY_80RIsXz4N1NMbMAON0" />
     <title>Ivan Sharai - Jedi Master | Иван Шарай - Мастер-джедай</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
